refactor: order 模块现代化 — enum 字符串化 + spec/command record 化 + 测试 fixture
- OrderStatus/PaymentStatus code 由 Integer 改为 String（PENDING_PAYMENT/PAID 等），
  全链路字符串化：DB VARCHAR(20) + CHECK 约束 + TypeHandler + @JsonValue
- 聚合根工厂/重建入口通过 spec record 收敛长参数：
  OrderCreateSpec / OrderReconstructSpec
- 状态转换统一返回 OrderTransition<E>（聚合根新实例 + 领域事件）
- 命令对象 record 化：CreateOrderCommand / PayOrderCommand / CancelOrderCommand 等
- 查询参数收敛：OrderQuery → OrderListQuery record（含 effectivePageNum/Size 规范化）
- 测试现代化：抽取 OrderTestFixture（builder + 工厂方法），精简 OrderAggregateTest
- 上游适配：admin（AdminOrderService/DashboardService/PlatformStatsController）+
  application（AdminOrderQueryAdapter/OrderNotificationEventConsumerTest）适配 String code
- order/AGENTS.md 同步状态机 + 枚举字符串化 + spec/command record 说明